<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7C0EE"
    tools:context="com.kumarsaket.encyptedcloud.MainActivity">

    <TextView
        android:paddingTop="5dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="30dp"
        android:text="@string/welcome_text"
        android:textColor="#31587B"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_grid"/>


    <GridLayout
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        android:id="@+id/home_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cloudStoreBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#E4E4E4"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/card_store_cloud" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tcm"
                    android:gravity="center"
                    android:text="@string/store_to_cloud"
                    android:textAlignment="center"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/cloudRetrieveBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#E4E4E4"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/card_retrieve_cloud" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tcm"
                    android:text="@string/retrieve_from_cloud"
                    android:textAlignment="center"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

            android:id="@+id/localStoreBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#E4E4E4"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/card_store_local" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tcm"
                    android:gravity="center"
                    android:text="@string/store_to_local"
                    android:textAlignment="center"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/localRetrieveBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#E4E4E4"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/card_retrieve_local" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tcm"
                    android:text="@string/retrieve_from_local"
                    android:textAlignment="center"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/decrypt_any_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#E4E4E4"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/card_dec_any_img" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tcm"
                    android:text="@string/decrypt_any_img"
                    android:textAlignment="center"
                    android:textColor="#707070"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>